  * debian/control
    + Bump Standards-Version to 3.9.5.
    + Clean up Suggests for su-to-root: Closes: #666545. Thanks Pino Toscano
      - added: kde-runtime
      - removed: kdebase-bin, kdebase-runtime, sux
    + Add Multi-Arch: foreign. Closes: #698800. Thanks Frédéric Brière
  * debian/rules:
    - Use dh_prep instead of dh_clean -k
    - Add -Wl,-z,relro to LDFLAGS
  * doc/menufile.5, doc/menufile.fr.5:
    - Add full icon path in example. Closes: #742490. Thanks Markus Koschany
  * su-to-root:
    + Fix support (hopefully) for sux. Closes: #695882. Thanks Ian Pangilinan

 -- Bill Allombert <ballombe@debian.org>  Fri, 13 Jun 2014 19:05:17 +0200

menu (2.1.46) unstable; urgency=low

  * The "Marseille" release.
  * Handling of l10n by Christian Perrier:
    + Programs translations:
      - Ukrainian updated by Serhij Dubyk.
      - Brazilian Portuguese updated by Sérgio Cipolla.
        Closes: #623121
    + su-to-root translations:
      - Ukrainian updated by Serhij Dubyk.
      - Brazilian Portuguese updated by Sérgio Cipolla.
        Closes: #623121
    + Menu sections translations:
      - Ukrainian updated by Serhij Dubyk.
      - Brazilian Portuguese updated by Sérgio Cipolla.
        Closes: #623121
      - Danish updated by Joe Dalton. Closes: #624656

  * doc/menu.sgml:
    + Fix typo in chapter 3.7. Thanks Hideki Yamane. Closes: #625736
  * update-menus/update-menus.cc
    + 'update-menus --remove' failed to remove lock file.
       Thanks Dave Steele. Closes: #648268
  * debian/control
    + Bump Standards-Version to 3.9.2.

 -- Bill Allombert <ballombe@debian.org>  Wed, 16 Nov 2011 12:33:27 +0100

menu (2.1.45) unstable; urgency=low

  * The "no ghost" release 
  * Handling of l10n by Christian Perrier:
    + Programs translations:
      - Danish updated. Closes: #609583
  * su-to-root: add support for gksudo and kdesudo. Closes: #604085, #602118.
  * update-menus/update-menus.cc: