@@ -1,5 +1,0 @@
-#! /bin/sh
-
-if test -x /usr/bin/update-menus.real; then
-  exec /usr/bin/update-menus.real "$@"
-fi
